terraform/nfs-vm.tf
# Creamos las máquinas virtuales para los nodos nfs
# https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/linux_virtual_machine

resource "azurerm_linux_virtual_machine" "nfsVM" {
    count               = length(var.nfs)
    name                = "${var.nfs[count.index]}"    
    resource_group_name = azurerm_resource_group.rg.name
    location            = azurerm_resource_group.rg.location
    size                = var.vm_nfs_size
    admin_username      = var.ssh_user
    network_interface_ids = [ azurerm_network_interface.nfsNic[count.index].id ]
    disable_password_authentication = true    

    custom_data = base64encode(data.template_file.cloud_config.rendered)

    # Clave ssh para securizar la conexión al nodo
    admin_ssh_key {
        username   = var.ssh_user
        public_key = file(var.public_key_path)
    }

    # Disco de escritura/lectura y de tipo estándar
    os_disk {
        caching              = "ReadWrite"
        storage_account_type = "Standard_LRS"
    }

    plan {
        name      = "centos-8-stream-free"
        product   = "centos-8-stream-free"
        publisher = "cognosys"
    }

    # La imagen del SO con la que se creará la máquina virtual, requiere de aceptación previa de la licencia
    source_image_reference {
        publisher = "cognosys"
        offer     = "centos-8-stream-free"
        sku       = "centos-8-stream-free"
        version   = "1.2019.0810"
    }

    boot_diagnostics {
        storage_account_uri = azurerm_storage_account.stAccount.primary_blob_endpoint
    }

    tags = {
        environment = "CP2"
    }

}
